# wokwi_pi_pico

./: .gitignore  CMakeLists.txt  README.md  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
blink_wokwi/: CMakeLists.txt
hello_world_tflite/: CMakeLists.txt  main_functions.cpp  wokwi.toml
pico_executorch/: CMakeLists.txt  balanced_tiny_mlp_mnist.pte  build_firmware_pico.sh  export_mlp_mnist.py  main.cpp  main_copy.cpp  mnist_model.ipynb  model_pte.c  new_main.cpp  wokwi.toml
